--- a/.gitignore
+++ b/.gitignore
@@ -211,4 +211,10 @@ __marimo__/
 /output
 
 /notebooks/extracted_data/
+/notebooks/extracted_data_v2/
+/notebooks/extracted_datav1/
+/notebooks/extracted_datav3/
+
+
+
 /samples
