--- a/.gitignore
+++ b/.gitignore
@@ -218,6 +218,12 @@ __marimo__/
 /notebooks/errors/
 notebooks/error_logs/
 /notebooks/additional_2025v1
-
+/notebooks/2018
+/notebooks/2019
+/notebooks/2020
+/notebooks/2021
+/notebooks/2022
+/notebooks/2023
+/notebooks/2024
 
 /samples
